--- a/join.html
+++ b/join.html
@@ -91,11 +91,16 @@
         </div>
       </div>
     </footer>
-    <!-- flying banner -->
+    <!-- flying banner
     <div class="top-button">
       <a href="#" class="chat-btn">
         <img src="images/minju/fly.png" alt="chat" />
-      </a>
+      </a> -->
+    </div>
+    <!-- 참여하기 -->
+    <div class="takejoin" id="bt-menu">
+          <button><i class="fa-regular fa-heart"></i> 참여하기</button>
+      
     </div>
   </body>
 </html>
