--- a/login.html
+++ b/login.html
@@ -89,7 +89,7 @@
         </div>
 
         <div class="left">
-          <i class="fa-solid fa-phone">문의하기</i>
+          <div class="tell"><img src="images/minju/tel.png" alt="tell">문의하기</div>
           <button class="oline">온라인문의</button>
           <button class="checklist">참여정보확인</button>
         </div>
@@ -100,6 +100,11 @@
       <a href="#" class="chat-btn">
         <img src="images/minju/fly.png" alt="chat" />
       </a> -->
-    <!--  -->
+    </div>
+    <!-- 참여하기 -->
+    <div class="takejoin" id="bt-menu">
+          <button><i class="fa-regular fa-heart"></i> 참여하기</button>
+      
+    </div>
   </body>
 </html>
