--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
     <footer>
       <div class="clearboth">
         <div class="right">
-          <h1>나눔메이트</h1>
+          <h1>나눔 메이트</h1>
           <p>
             나눔메이트는 사회에 기여하고자 하는 분들을 위한 소중한 커뮤니티입니다. <br />
             서비스 이용약관 개인정보 처리방침
@@ -457,24 +457,22 @@
         </div>
 
         <div class="left">
-          <i class="fa-solid fa-phone">문의하기</i>
+          <div class="tell"><img src="images/minju/tel.png" alt="tell">문의하기</div>
           <button class="oline">온라인문의</button>
           <button class="checklist">참여정보확인</button>
         </div>
       </div>
     </footer>
-    <!-- flying banner -->
+    <!-- flying banner
     <div class="top-button">
       <a href="#" class="chat-btn">
         <img src="images/minju/fly.png" alt="chat" />
-      </a>
+      </a> -->
     </div>
     <!-- 참여하기 -->
     <div class="takejoin" id="bt-menu">
-      <ul>
-        <button class="heart">
-          <i class="fa-regular fa-heart"></i> 참여하기</button>
-      </ul>
+          <button><i class="fa-regular fa-heart"></i> 참여하기</button>
+      
     </div>
   </body>
 </html>
