헤더 기능추가외

--- a/index.html
+++ b/index.html
@@ -53,140 +53,81 @@
     <script src="js/kyungran.js"></script>
     <script src="js/minju.js"></script>
   </head>
-  <body><!-- 승아 -->
-    <header>
-      <!-- <div class="wrap">
-        <div id="login-section">
-          <button id="login-button">로그인</button>
-        </div>
-        <div id="dashboard-section" style="display: none">
-          <div id="username-display"></div>
-          <button id="logout-button">로그아웃</button>
-        </div>
-        <div id="signup-section">
-          <button id="signup-button">회원가입</button>
-        </div>
-      </div> -->
-      <nav class="hd-menu">
-        <div class="hd-inner">
-        <a href="#"><img src="images/logo2.png" alt="로고이미지2" /></a>
+  <body>
+     <!-- 승아 -->
+     <header>
+      <div class="hd-inner">
+      <nav class="top-nav" id="nav">
+        <a href="#"><img src="images/logo_bg2.png" alt="로고이미지2" /></a>
         <ul class="top-menu">
           <li><a href="#">서비스 소개</a></li>
           <li><a href="#">프로그램</a></li>
           <li><a href="#">게시판</a></li>
           <li><a href="#">후기</a></li>
-          <!-- <div class="wrap">
-            <div id="login-section">
-              <button id="login-button">로그인</button>
-            </div>
-            <div id="dashboard-section" style="display: none">
-              <div id="username-display"></div>
-              <button id="logout-button">로그아웃</button>
-            </div>
-            <div id="signup-section">
-              <button id="signup-button">회원가입</button>
-            </div>
-          </div> -->
           <div class="log">
-            <li><a href="#">로그인</a></li>
-            <li><a href="#">회원가입</a></li>
-          
+            <li><a href="login.html">로그인</a></li>
+            <li><a href="join.html">회원가입</a></li>
+          </div>
         </ul>
-      </div>
       </nav>
-
-             <!-- 햄버거 버튼 -->
-             <button class="mbt">
-              <span></span>
-              <span></span>
-              <span></span>
-            </button>
-            <!-- 모바일 메뉴 리스트 -->
-            <div class="nav-mb">
-              <ul class="nav-mb-gnb">
-                <li><a href="#">서비스 소개</a></li>
-                <li><a href="#">프로그램</a></li>
-                <li><a href="#">게시판</a></li>
-                <li><a href="#">후기</a></li>
-                <div class="log">
-                  <a href="#">로그인</a>
-                                  <a href="#">회원가입</a>
-                                  </div>
-                
-              </ul>
-              <!-- <img src="images/logo2.png" alt=""> -->
-            </div>
-
-
+    </div>
+      <!-- 햄버거 버튼 -->
+      <button class="m-bt">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <!-- 모바일 메뉴 리스트 -->
+      <div class="nav-mb">
+        <img src="images/logo.png" alt="로고이미지" />
+        <ul class="nav-mb-gnb">
+          <li><a href="#">서비스 소개</a></li>
+          <li><a href="#">프로그램</a></li>
+          <li><a href="#">게시판</a></li>
+          <li><a href="#">후기</a></li>
+        </ul>
+        <div class="m-log">
+          <li><a href="#">로그인</a></li>
+          <li><a href="#">회원가입</a></li>
+        </div>
+      </div>
     </header>
-    <div class="visual">
-      <img src="images/visual-img1.png" class="visual-img" alt="비주얼 이미지" />
-      <!-- <div class="visual-text">
-        <h2>함께하는 봉사 커뮤니티</h2>
-        <p>함께하는 봉사 커뮤니티 만들어갑니다.</p>
-      </div> -->
-      <!--모바일비주얼 이미지 -->
-      <img src="images/mb-visualimg.png" class="mb-visual-img" alt="모바일 비주얼 이미지" />
-      <div class="counter-wrapper">
-<div class="count-inner">
-          <div class="counter counter-1">
-            <h2 class="timer count-title count-number" data-to="8571" data-speed="3000">8071</h2>
-            <span class="plus">명</span>
-            <p class="count-text">함께하는 사람들</p>
-          </div>
-          <div class="counter counter-2">
-            <h2 class="timer count-title count-number" data-to="3511" data-speed="3000">3011</h2>
-            <span class="plus">건</span>
-            <p class="count-text">프로그램 건수</p>
-          </div>
-          <div class="counter counter-3 counter-end">
-            <h2 class="timer count-title count-number" data-to="5944" data-speed="3000">5444</h2>
-            <span class="plus">건</span>
-            <p class="count-text">앱 다운로드 수</p>
-          </div>
-        </div>
-      </div>    <!-- counter-wrapper 디브 -->
-    </div> <!-- visual 디브 -->
-<!-- 섹션1 서비스 -->
-<div class="section1" class="service">
-  <div class="sec1_inner">
-    <h4>일상속 나눔을 만들어요</h4>
-    <ul class="service_box">
-      <li>
-        <a href="#"
-          ><img src="images/sec1-1.jpg" alt="개인"
-        /></a>
-        <div class="service_box_text">
-          <a href="#">
-           <p></p>
-            </a
-          >
-        </div>
-      </li>
-      <li>
-        <a href="#"
-          ><img src="images/sec1-2.png" alt="기관"
-        /></a>
-        <div class="service_box_text">
-          <a href="#">
-            <p></p>
-          </a>
-        </div>
 
-      </li>
-      <li>
-        <a href="#"
-          ><img src="images/sec1-3.png" alt="사회"
-        /></a>
-        <div class="service_box_text">
-          <a href="#">
-            <p></p>
-            </a>
+    <div class="visual">
+      <!--모바일비주얼 이미지 -->
+      <img src="images/mb-visualimg.png" class="mb-visual-img" alt="모바일 비주얼 이미지">
+
+      <img src="images/visual-img1.png" class="visual-img" alt="비주얼 이미지" />
+      <div class="counter-wrapper">
+        <div class="counter counter-1">
+          <h2 class="timer count-title count-number" data-to="8571" data-speed="3000">8071</h2>
+          <span class="plus">명</span>
+          <p class="count-text">함께하는 사람들</p>
         </div>
-      </li>
-    </ul>
-    </div> 
+        <div class="counter counter-2">
+          <h2 class="timer count-title count-number" data-to="3511" data-speed="3000">3011</h2>
+          <span class="plus">건</span>
+          <p class="count-text">프로그램 건수</p>
+        </div>
+        <div class="counter counter-3 counter-end">
+          <h2 class="timer count-title count-number" data-to="5944" data-speed="3000">5444</h2>
+          <span class="plus">건</span>
+          <p class="count-text">앱 다운로드 수</p>
+        </div>
+      </div>
+      <!-- counter-wrapper 디브 -->
+    </div>
+    <!-- visual 디브 -->
+    <div class="section1">
+      <div class="sec1-inner">
+          <div class="sec1-title">
+              <h2>나눔메이트</h2>
+              <p>아름다운 인연을 나눔메이트와 같이 시작하세요.</p>
+              <p>함께하는 여러분이 바로 '나눔 친구'입니다.</p>
+      </div>
+    </div>
   </div>
+
     <!-- 경란 -->
     <div class="section2">
       <h1 class="section-tite">나눔 프로그램</h1>
