섹션3 더보기 버튼 수정 및 이너 수정

--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <!-- 주소.이미지.키워드 추가확인필요 -->
-     <!-- SEO -->
-     <meta name="title" content="일상나눔을 만드는 나눔메이트" />
-     <meta name="keywords" content="나눔메이트, 나눔, 자원봉사, 프로그램, 대구봉사 " />
-     <meta name="author" content="WIDEMOBILE" />
-     <meta name="description" content="나눔메이트, 나눔, 자원봉사, 프로그램, 대구봉사 " />
-     <meta name="Robots" content="noindex, nofollow" />
-     <!-- Open Graph -->
-     <meta property="og:type" content="website" />
-     <meta property="og:title" content="일상나눔을 만드는 나눔메이트" />
-     <meta property="og:site_name" content="나눔메이트" />
-     <meta property="og:description" content="일상속 나눔을 만들어갑니다. " />
-     <meta property="og:image" content="http://127.0.0.1:5504/images/logo2.png" />
-     <meta property="og:url" content="https://pro-nanum.vercel.app/" />
-     <link rel="canonical" href="https://pro-nanum.vercel.app/" />
+    <!-- SEO -->
+    <meta name="title" content="일상나눔을 만드는 나눔메이트" />
+    <meta name="keywords" content="나눔메이트, 나눔, 자원봉사, 프로그램, 대구봉사 " />
+    <meta name="author" content="WIDEMOBILE" />
+    <meta name="description" content="나눔메이트, 나눔, 자원봉사, 프로그램, 대구봉사 " />
+    <meta name="Robots" content="noindex, nofollow" />
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="일상나눔을 만드는 나눔메이트" />
+    <meta property="og:site_name" content="나눔메이트" />
+    <meta property="og:description" content="일상속 나눔을 만들어갑니다. " />
+    <meta property="og:image" content="http://127.0.0.1:5504/images/logo2.png" />
+    <meta property="og:url" content="https://pro-nanum.vercel.app/" />
+    <link rel="canonical" href="https://pro-nanum.vercel.app/" />
     <!-- Twitter -->
     <meta name="twitter:title" content="일상나눔을 만드는 나눔메이트" />
     <meta name="twitter:description" content="나눔메이트, 나눔, 자원봉사, 프로그램, 대구봉사 " />
@@ -53,7 +53,8 @@
     <script src="js/kyungran.js"></script>
     <script src="js/minju.js"></script>
   </head>
-  <body><!-- 승아 -->
+  <body>
+    <!-- 승아 -->
     <header>
       <!-- <div class="wrap">
         <div id="login-section">
@@ -69,13 +70,13 @@
       </div> -->
       <nav class="hd-menu">
         <div class="hd-inner">
-        <a href="#"><img src="images/logo2.png" alt="로고이미지2" /></a>
-        <ul class="top-menu">
-          <li><a href="#">서비스 소개</a></li>
-          <li><a href="#">프로그램</a></li>
-          <li><a href="#">게시판</a></li>
-          <li><a href="#">후기</a></li>
-          <!-- <div class="wrap">
+          <a href="#"><img src="images/logo2.png" alt="로고이미지2" /></a>
+          <ul class="top-menu">
+            <li><a href="#">서비스 소개</a></li>
+            <li><a href="#">프로그램</a></li>
+            <li><a href="#">게시판</a></li>
+            <li><a href="#">후기</a></li>
+            <!-- <div class="wrap">
             <div id="login-section">
               <button id="login-button">로그인</button>
             </div>
@@ -87,37 +88,34 @@
               <button id="signup-button">회원가입</button>
             </div>
           </div> -->
-          <div class="log">
-            <li><a href="#">로그인</a></li>
-            <li><a href="#">회원가입</a></li>
-          
-        </ul>
-      </div>
+            <div class="log">
+              <li><a href="#">로그인</a></li>
+              <li><a href="#">회원가입</a></li>
+            </div>
+          </ul>
+        </div>
       </nav>
 
-             <!-- 햄버거 버튼 -->
-             <button class="mbt">
-              <span></span>
-              <span></span>
-              <span></span>
-            </button>
-            <!-- 모바일 메뉴 리스트 -->
-            <div class="nav-mb">
-              <ul class="nav-mb-gnb">
-                <li><a href="#">서비스 소개</a></li>
-                <li><a href="#">프로그램</a></li>
-                <li><a href="#">게시판</a></li>
-                <li><a href="#">후기</a></li>
-                <div class="log">
-                  <a href="#">로그인</a>
-                                  <a href="#">회원가입</a>
-                                  </div>
-                
-              </ul>
-              <!-- <img src="images/logo2.png" alt=""> -->
-            </div>
-
-
+      <!-- 햄버거 버튼 -->
+      <button class="mbt">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <!-- 모바일 메뉴 리스트 -->
+      <div class="nav-mb">
+        <ul class="nav-mb-gnb">
+          <li><a href="#">서비스 소개</a></li>
+          <li><a href="#">프로그램</a></li>
+          <li><a href="#">게시판</a></li>
+          <li><a href="#">후기</a></li>
+          <div class="log">
+            <a href="#">로그인</a>
+            <a href="#">회원가입</a>
+          </div>
+        </ul>
+        <!-- <img src="images/logo2.png" alt=""> -->
+      </div>
     </header>
     <div class="visual">
       <img src="images/visual-img1.png" class="visual-img" alt="비주얼 이미지" />
@@ -128,7 +126,7 @@
       <!--모바일비주얼 이미지 -->
       <img src="images/mb-visualimg.png" class="mb-visual-img" alt="모바일 비주얼 이미지" />
       <div class="counter-wrapper">
-<div class="count-inner">
+        <div class="count-inner">
           <div class="counter counter-1">
             <h2 class="timer count-title count-number" data-to="8571" data-speed="3000">8071</h2>
             <span class="plus">명</span>
@@ -145,48 +143,42 @@
             <p class="count-text">앱 다운로드 수</p>
           </div>
         </div>
-      </div>    <!-- counter-wrapper 디브 -->
-    </div> <!-- visual 디브 -->
-<!-- 섹션1 서비스 -->
-<div class="section1" class="service">
-  <div class="sec1_inner">
-    <h4>일상속 나눔을 만들어요</h4>
-    <ul class="service_box">
-      <li>
-        <a href="#"
-          ><img src="images/sec1-1.jpg" alt="개인"
-        /></a>
-        <div class="service_box_text">
-          <a href="#">
-           <p></p>
-            </a
-          >
-        </div>
-      </li>
-      <li>
-        <a href="#"
-          ><img src="images/sec1-2.png" alt="기관"
-        /></a>
-        <div class="service_box_text">
-          <a href="#">
-            <p></p>
-          </a>
-        </div>
-
-      </li>
-      <li>
-        <a href="#"
-          ><img src="images/sec1-3.png" alt="사회"
-        /></a>
-        <div class="service_box_text">
-          <a href="#">
-            <p></p>
-            </a>
-        </div>
-      </li>
-    </ul>
-    </div> 
-  </div>
+      </div>
+      <!-- counter-wrapper 디브 -->
+    </div>
+    <!-- visual 디브 -->
+    <!-- 섹션1 서비스 -->
+    <div class="section1" class="service">
+      <div class="sec1_inner">
+        <h4>일상속 나눔을 만들어요</h4>
+        <ul class="service_box">
+          <li>
+            <a href="#"><img src="images/sec1-1.jpg" alt="개인" /></a>
+            <div class="service_box_text">
+              <a href="#">
+                <p></p>
+              </a>
+            </div>
+          </li>
+          <li>
+            <a href="#"><img src="images/sec1-2.png" alt="기관" /></a>
+            <div class="service_box_text">
+              <a href="#">
+                <p></p>
+              </a>
+            </div>
+          </li>
+          <li>
+            <a href="#"><img src="images/sec1-3.png" alt="사회" /></a>
+            <div class="service_box_text">
+              <a href="#">
+                <p></p>
+              </a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
     <!-- 경란 -->
     <div class="section2">
       <h1 class="section-tite">나눔 프로그램</h1>
@@ -196,11 +188,11 @@
           <li><a href="#work02">생활편의</a></li>
           <li><a href="#work03">문화행사</a></li>
           <li><a href="#work04">재해재난</a></li>
-          <li ><a href="#work05" >공익인권</a></li>
+          <li><a href="#work05">공익인권</a></li>
           <li><a href="#work06">교육</a></li>
           <li><a href="#work07">상담</a></li>
           <li><a href="#work08">환경</a></li>
-          <li ><a href="#work09">기타</a></li>
+          <li><a href="#work09">기타</a></li>
           <span></span>
         </ul>
       </div>
@@ -493,9 +485,7 @@
       <div class="section3-inner">
         <div class="CM-box">
           <ul class="CM">
-            <span
-              ><img src="images/kyungran/icon3.png" alt="3D아이콘" /> 커뮤니티<a href="#"><img class="plus-icon" /></a
-            ></span>
+            <span><img src="images/kyungran/icon3.png" alt="3D아이콘" /> 커뮤니티<a href="#" class="plus-icon"></a></span>
             <li>커뮤니티 내용 들어가주세요 커뮤니티</li>
             <li>커뮤니티 내용 들어가주세요 커뮤니티</li>
             <li>커뮤니티 내용 들어가주세요 커뮤니티</li>
@@ -504,9 +494,7 @@
 
         <div class="FAQ-box">
           <ul class="FAQ">
-            <span
-              ><img src="images/kyungran/icon3.png" alt="3D아이콘" /> 자주 묻는 질문 <a href="#"><img class="plus-icon" /></a
-            ></span>
+            <span><img src="images/kyungran/icon3.png" alt="3D아이콘" /> 자주 묻는 질문 <a href="#" class="plus-icon"></a></span>
             <div class="FAQ-small-box">
               <li>Q. 봉사신청은 어떻게 하나요?</li>
               <li>Q. 기관등록은 어떻게 하나요?</li>
