--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     <meta name="author" content="WIDEMOBILE" />
     <meta name="description" content="나눔메이트, 나눔, 자원봉사, 프로그램, 대구봉사 " />
     <meta name="Robots" content="noindex, nofollow" />
-    <!-- Open Graph -->
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="일상나눔을 만드는 나눔메이트" />
-    <meta property="og:site_name" content="나눔메이트" />
-    <meta property="og:description" content="일상속 나눔을 만들어갑니다. " />
-    <meta property="og:image" content="http://127.0.0.1:5504/images/logo2.png" />
-    <meta property="og:url" content="https://pro-nanum.vercel.app/" />
-    <link rel="canonical" href="https://pro-nanum.vercel.app/" />
+   <!-- Open Graph -->
+   <meta property="og:type" content="website" />
+   <meta property="og:title" content="일상나눔을 만드는 나눔메이트" />
+   <meta property="og:site_name" content="나눔메이트" />
+   <meta property="og:description" content="일상속 나눔을 만들어갑니다. " />
+   <meta property="og:image" content="http://127.0.0.1:5507/images/visual-img1.png" />
+   <meta property="og:url" content="https://pro-nanum.vercel.app/" />
+   <link rel="canonical" href="https://pro-nanum.vercel.app/" />
     <!-- Twitter -->
     <meta name="twitter:title" content="일상나눔을 만드는 나눔메이트" />
     <meta name="twitter:description" content="나눔메이트, 나눔, 자원봉사, 프로그램, 대구봉사 " />
@@ -54,11 +54,12 @@
     <script src="js/minju.js"></script>
   </head>
   <body>
-<!-- 승아 -->
+    <!-- 승아 -->
     <header>
       <div class="hd-inner">
       <nav class="top-nav" id="nav">
-        <a href="#"><img src="images/logo_bg2.png" alt="로고이미지2" /></a>
+        <a href="#"><img src="images/logo_bg2.png" alt="로고이미지2" class="logo-img"></a>
+
         <ul class="top-menu">
           <li><a href="#">서비스 소개</a></li>
           <li><a href="#">프로그램</a></li>
@@ -91,11 +92,9 @@
         </div>
       </div>
     </header>
-
     <div class="visual">
       <!--모바일비주얼 이미지 -->
       <img src="images/mb-visualimg.png" class="mb-visual-img" alt="모바일 비주얼 이미지">
-
       <img src="images/visual-img1.png" class="visual-img" alt="비주얼 이미지" />
       <div class="counter-wrapper">
         <div class="counter counter-1">
@@ -115,14 +114,13 @@
         </div>
       </div>
       <!-- counter-wrapper 디브 -->
-    </div>
-    <!-- visual 디브 -->
+    </div><!-- visual 디브 -->
     <div class="section1">
       <div class="sec1-inner">
           <div class="sec1-title">
               <h2>나눔메이트</h2>
               <p>아름다운 인연을 나눔메이트와 같이 시작하세요.</p>
-              <p>함께하는 여러분이 바로 '나눔 친구'입니다.</p>
+              <p>함께하는 여러분이 '나눔 친구'입니다.</p>
       </div>
     </div>
   </div>
