섹션3 이미지 추가

--- a/index.html
+++ b/index.html
@@ -421,11 +421,7 @@
       </div>
 
       <div class="pgn">
-        <span>1</span>
-        <span>2</span>
-        <span>3</span>
-        <span>4</span>
-        <img src="images/kyungran/pg-icon.png" alt="페이지네이션아이콘" />
+        <button>전체보기&nbsp&nbsp<i class="fas fa-light fa-chevron-right"></i></button>
       </div>
     </div>
 
