--- a/join.html
+++ b/join.html
@@ -71,9 +71,9 @@
       </div>
     </div>
     <footer>
-      <div class="clearboth">
+      <div class="inner">
         <div class="right">
-          <h1>나눔메이트</h1>
+          <h1 class="nanum">나눔 <span>메이트</span></h1>
           <p>
             나눔메이트는 사회에 기여하고자 하는 분들을 위한 소중한 커뮤니티입니다. <br />
             서비스 이용약관 개인정보 처리방침
@@ -82,10 +82,10 @@
             Copyright (C)나눔메이트. All rights reserved.
           </p>
           <div class="line"></div>
+          
         </div>
-
         <div class="left">
-          <i class="fa-solid fa-phone">문의하기</i>
+          <div class="tell"><img src="images/minju/tell.png" alt="tell">문의하기</div>
           <button class="oline">온라인문의</button>
           <button class="checklist">참여정보확인</button>
         </div>
