--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
           
         </div>
         <div class="left">
-          <i class="fa-solid fa-phone">문의하기</i>
+          <div class="tell"><img src="images/minju/tell.png" alt="tell">문의하기</div>
           <button class="oline">온라인문의</button>
           <button class="checklist">참여정보확인</button>
         </div>
