--- a/login.html
+++ b/login.html
@@ -64,8 +64,8 @@
             <input type="checkbox" class="remember-check" id="checkbox" />
             <label for="checkbox">아이디 저장하기</label>
           </div>
-          <button class="loginbutton">로그인</button>
-          <button class="joinbutton">회원가입</button>
+          <button class="loginbutton"><a href="index.html">로그인</a></button>
+          <button class="joinbutton"><a href="join.html">회원가입</a></button>
           <div class="icon">
             <a href="#"><img src="images/minju/icon1.png" alt="카카오톡" /></a>
             <a href="#"><img src="images/minju/icon2.png" alt="구글" /></a>
@@ -75,9 +75,9 @@
       </div>
     </div>
     <footer>
-      <div class="clearboth">
+      <div class="inner">
         <div class="right">
-          <h1>나눔메이트</h1>
+          <h1 class="nanum">나눔 <span>메이트</span></h1>
           <p>
             나눔메이트는 사회에 기여하고자 하는 분들을 위한 소중한 커뮤니티입니다. <br />
             서비스 이용약관 개인정보 처리방침
@@ -87,9 +87,8 @@
           </p>
           <div class="line"></div>
         </div>
-
         <div class="left">
-          <i class="fa-solid fa-phone">문의하기</i>
+          <div class="tell"><img src="images/minju/tell.png" alt="tell" />문의하기</div>
           <button class="oline">온라인문의</button>
           <button class="checklist">참여정보확인</button>
         </div>
