--- a/index.html
+++ b/index.html
@@ -185,35 +185,35 @@
             <a href="#">
               <img class="img1" src="images/kyungran/1-1.png" alt="봉사이미지" />
               <span>벽화길 조성 자원봉사활동 모집</span>
-              <span><img src="images/kyungran/icon1.png" alt="캘린더아이콘" /> &nbsp&nbsp&nbsp&nbsp2024-05-20 </span>
-              <span><img src="images/kyungran/icon2.png" alt="지도아이콘" /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp대구 &nbsp달서구</span>
+              <span> 2024-05-20</span>
+              <span>&nbsp&nbsp대구 &nbsp달서구</span>
             </a>
             <button type="button" class="hart-icon"></button>
           </div>
           <div class="img-box">
             <a href="#">
-              <img src="images/kyungran/1-2.png" alt="봉사이미지" />
+              <img class="img1" src="images/kyungran/1-2.png" alt="봉사이미지" />
               <span>벽화길 조성 자원봉사활동 모집</span>
-              <span><img src="images/kyungran/icon1.png" alt="캘린더아이콘" /> &nbsp&nbsp&nbsp&nbsp2024-05-20 </span>
-              <span><img src="images/kyungran/icon2.png" alt="지도아이콘" /> &nbsp&nbsp&nbsp&nbsp대구 &nbsp달서구</span>
+              <span> 2024-05-20 </span>
+              <span>대구 &nbsp달서구</span>
             </a>
             <button type="button" class="hart-icon"></button>
           </div>
           <div class="img-box">
             <a href="#">
-              <img src="images/kyungran/1-3.png" alt="봉사이미지" />
+              <img class="img1" src="images/kyungran/1-3.png" alt="봉사이미지" />
               <span>벽화길 조성 자원봉사활동 모집</span>
-              <span><img src="images/kyungran/icon1.png" alt="캘린더아이콘" /> &nbsp&nbsp&nbsp&nbsp2024-05-20 </span>
-              <span><img src="images/kyungran/icon2.png" alt="지도아이콘" /> &nbsp&nbsp&nbsp&nbsp대구 &nbsp달서구</span>
+              <span> 2024-05-20 </span>
+              <span>대구 &nbsp달서구</span>
             </a>
             <button type="button" class="hart-icon"></button>
           </div>
           <div class="img-box">
             <a href="#">
-              <img src="images/kyungran/1-4.png" alt="봉사이미지" />
+              <img class="img1" src="images/kyungran/1-4.png" alt="봉사이미지" />
               <span>벽화길 조성 자원봉사활동 모집</span>
-              <span><img src="images/kyungran/icon1.png" alt="캘린더아이콘" /> &nbsp&nbsp&nbsp&nbsp2024-05-20 </span>
-              <span><img src="images/kyungran/icon2.png" alt="지도아이콘" /> &nbsp&nbsp&nbsp&nbsp대구 &nbsp달서구</span>
+              <span> 2024-05-20 </span>
+              <span>대구 &nbsp달서구</span>
             </a>
             <button type="button" class="hart-icon"></button>
           </div>
@@ -221,37 +221,37 @@
         <div class="list-wrap">
           <div class="img-box">
             <a href="#">
-              <img src="images/kyungran/1-5.png" alt="봉사이미지" />
+              <img class="img1" src="images/kyungran/1-5.png" alt="봉사이미지" />
               <span>벽화길 조성 자원봉사활동 모집</span>
-              <span><img src="images/kyungran/icon1.png" alt="캘린더아이콘" /> &nbsp&nbsp&nbsp&nbsp2024-05-20 </span>
-              <span><img src="images/kyungran/icon2.png" alt="지도아이콘" /> &nbsp&nbsp&nbsp&nbsp대구 &nbsp달서구</span>
+              <span> 2024-05-20 </span>
+              <span>대구 &nbsp달서구</span>
             </a>
             <button type="button" class="hart-icon"></button>
           </div>
           <div class="img-box">
             <a href="#">
-              <img src="images/kyungran/1-6.png" alt="봉사이미지" />
+              <img class="img1" src="images/kyungran/1-6.png" alt="봉사이미지" />
               <span>벽화길 조성 자원봉사활동 모집</span>
-              <span><img src="images/kyungran/icon1.png" alt="캘린더아이콘" /> &nbsp&nbsp&nbsp&nbsp2024-05-20 </span>
-              <span><img src="images/kyungran/icon2.png" alt="지도아이콘" /> &nbsp&nbsp&nbsp&nbsp대구 &nbsp달서구</span>
+              <span> 2024-05-20 </span>
+              <span>대구 &nbsp달서구</span>
             </a>
             <button type="button" class="hart-icon"></button>
           </div>
           <div class="img-box">
             <a href="#">
-              <img src="images/kyungran/1-7.png" alt="봉사이미지" />
+              <img class="img1" src="images/kyungran/1-7.png" alt="봉사이미지" />
               <span>벽화길 조성 자원봉사활동 모집</span>
-              <span><img src="images/kyungran/icon1.png" alt="캘린더아이콘" /> &nbsp&nbsp&nbsp&nbsp2024-05-20 </span>
-              <span><img src="images/kyungran/icon2.png" alt="지도아이콘" /> &nbsp&nbsp&nbsp&nbsp대구 &nbsp달서구</span>
+              <span> 2024-05-20 </span>
+              <span>대구 &nbsp달서구</span>
             </a>
             <button type="button" class="hart-icon"></button>
           </div>
           <div class="img-box">
             <a href="#">
-              <img src="images/kyungran/1-8.png" alt="봉사이미지" />
+              <img class="img1" src="images/kyungran/1-8.png" alt="봉사이미지" />
               <span>벽화길 조성 자원봉사활동 모집</span>
-              <span><img src="images/kyungran/icon1.png" alt="캘린더아이콘" /> &nbsp&nbsp&nbsp&nbsp2024-05-20 </span>
-              <span><img src="images/kyungran/icon2.png" alt="지도아이콘" /> &nbsp&nbsp&nbsp&nbsp대구 &nbsp달서구</span>
+              <span> 2024-05-20 </span>
+              <span>대구 &nbsp달서구</span>
             </a>
             <button type="button" class="hart-icon"></button>
           </div>
@@ -272,7 +272,7 @@
           </div>
           <div class="img-box">
             <a href="#">
-              <img src="images/kyungran/2-2.png" alt="봉사이미지" />
+              <img class="img1" src="images/kyungran/2-2.png" alt="봉사이미지" />
               <span>무료급식 자원봉사자 모집</span>
               <span><img src="images/kyungran/icon1.png" alt="캘린더아이콘" /> &nbsp&nbsp&nbsp&nbsp2024-05-20 </span>
               <span><img src="images/kyungran/icon2.png" alt="지도아이콘" /> &nbsp&nbsp&nbsp&nbsp대구 &nbsp달서구</span>
@@ -281,7 +281,7 @@
           </div>
           <div class="img-box">
             <a href="#">
-              <img src="images/kyungran/2-3.png" alt="봉사이미지" />
+              <img class="img1" src="images/kyungran/2-3.png" alt="봉사이미지" />
               <span>벽화길 조성 자원봉사활동 모집</span>
               <span><img src="images/kyungran/icon1.png" alt="캘린더아이콘" /> &nbsp&nbsp&nbsp&nbsp2024-05-20 </span>
               <span><img src="images/kyungran/icon2.png" alt="지도아이콘" /> &nbsp&nbsp&nbsp&nbsp대구 &nbsp달서구</span>
@@ -290,7 +290,7 @@
           </div>
           <div class="img-box">
             <a href="#">
-              <img src="images/kyungran/2-4.png" alt="봉사이미지" />
+              <img class="img1" src="images/kyungran/2-4.png" alt="봉사이미지" />
               <span>벽화길 조성 자원봉사활동 모집</span>
               <span><img src="images/kyungran/icon1.png" alt="캘린더아이콘" /> &nbsp&nbsp&nbsp&nbsp2024-05-20 </span>
               <span><img src="images/kyungran/icon2.png" alt="지도아이콘" /> &nbsp&nbsp&nbsp&nbsp대구 &nbsp달서구</span>
@@ -301,7 +301,7 @@
         <div class="list-wrap">
           <div class="img-box">
             <a href="#">
-              <img src="images/kyungran/2-5.png" alt="봉사이미지" />
+              <img class="img1" src="images/kyungran/2-5.png" alt="봉사이미지" />
               <span>벽화길 조성 자원봉사활동 모집</span>
               <span><img src="images/kyungran/icon1.png" alt="캘린더아이콘" /> &nbsp&nbsp&nbsp&nbsp2024-05-20 </span>
               <span><img src="images/kyungran/icon2.png" alt="지도아이콘" /> &nbsp&nbsp&nbsp&nbsp대구 &nbsp달서구</span>
@@ -310,7 +310,7 @@
           </div>
           <div class="img-box">
             <a href="#">
-              <img src="images/kyungran/2-6.png" alt="봉사이미지" />
+              <img class="img1" src="images/kyungran/2-6.png" alt="봉사이미지" />
               <span>벽화길 조성 자원봉사활동 모집</span>
               <span><img src="images/kyungran/icon1.png" alt="캘린더아이콘" /> &nbsp&nbsp&nbsp&nbsp2024-05-20 </span>
               <span><img src="images/kyungran/icon2.png" alt="지도아이콘" /> &nbsp&nbsp&nbsp&nbsp대구 &nbsp달서구</span>
@@ -319,7 +319,7 @@
           </div>
           <div class="img-box">
             <a href="#">
-              <img src="images/kyungran/2-7.png" alt="봉사이미지" />
+              <img class="img1" src="images/kyungran/2-7.png" alt="봉사이미지" />
               <span>벽화길 조성 자원봉사활동 모집</span>
               <span><img src="images/kyungran/icon1.png" alt="캘린더아이콘" /> &nbsp&nbsp&nbsp&nbsp2024-05-20 </span>
               <span><img src="images/kyungran/icon2.png" alt="지도아이콘" /> &nbsp&nbsp&nbsp&nbsp대구 &nbsp달서구</span>
@@ -328,7 +328,7 @@
           </div>
           <div class="img-box">
             <a href="#">
-              <img src="images/kyungran/2-8.png" alt="봉사이미지" />
+              <img class="img1" src="images/kyungran/2-8.png" alt="봉사이미지" />
               <span>벽화길 조성 자원봉사활동 모집</span>
               <span><img src="images/kyungran/icon1.png" alt="캘린더아이콘" /> &nbsp&nbsp&nbsp&nbsp2024-05-20 </span>
               <span><img src="images/kyungran/icon2.png" alt="지도아이콘" /> &nbsp&nbsp&nbsp&nbsp대구 &nbsp달서구</span>
@@ -427,7 +427,8 @@
       <div class="section3-inner">
         <div class="CM-box">
           <ul class="CM">
-            <span><img src="images/kyungran/icon3.png" alt="3D아이콘" /> 커뮤니티<a href="#" class="plus-icon"></a></span>
+            <span> 커뮤니티<a href="#" class="plus-icon"></a></span>
+            <li>커뮤니티 내용 들어가주세요 커뮤니티</li>
             <li>커뮤니티 내용 들어가주세요 커뮤니티</li>
             <li>커뮤니티 내용 들어가주세요 커뮤니티</li>
             <li>커뮤니티 내용 들어가주세요 커뮤니티</li>
@@ -436,9 +437,10 @@
 
         <div class="FAQ-box">
           <ul class="FAQ">
-            <span><img src="images/kyungran/icon3.png" alt="3D아이콘" /> 자주 묻는 질문 <a href="#" class="plus-icon"></a></span>
+            <span> 자주 묻는 질문 <a href="#" class="plus-icon"></a></span>
             <div class="FAQ-small-box">
               <li>Q. 봉사신청은 어떻게 하나요?</li>
+              <li>Q. 기관등록은 어떻게 하나요?</li>
               <li>Q. 기관등록은 어떻게 하나요?</li>
             </div>
           </ul>
