이미지수정

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
    <meta property="og:title" content="일상나눔을 만드는 나눔메이트" />
    <meta property="og:site_name" content="나눔메이트" />
    <meta property="og:description" content="일상속 나눔을 만들어갑니다. " />
-   <meta property="og:image" content="http://127.0.0.1:5507/images/visual-img1.png" />
+   <meta property="og:image" content="http://127.0.0.1:5507/images/visual-img2.png" />
    <meta property="og:url" content="https://pro-nanum.vercel.app/" />
    <link rel="canonical" href="https://pro-nanum.vercel.app/" />
     <!-- Twitter -->
@@ -94,8 +94,8 @@
     </header>
     <div class="visual">
       <!--모바일비주얼 이미지 -->
-      <img src="images/mb-visualimg.png" class="mb-visual-img" alt="모바일 비주얼 이미지">
-      <img src="images/visual-img1.png" class="visual-img" alt="비주얼 이미지" />
+      <img src="images/mb-visualimg2.png" class="mb-visual-img" alt="모바일 비주얼 이미지">
+      <img src="images/visual-img2.png" class="visual-img" alt="비주얼 이미지" />
       <div class="counter-wrapper">
         <div class="counter counter-1">
           <h2 class="timer count-title count-number" data-to="8571" data-speed="3000">8071</h2>
@@ -124,7 +124,6 @@
       </div>
     </div>
   </div>
-
     <!-- 경란 -->
     <div class="section2">
       <h1 class="section-tite">나눔 프로그램</h1>
@@ -480,7 +479,7 @@
     <div class="section5">
       <div class="animated-title">
         <div class="track">
-          <div class="content"><img src="images/minju/imges1.png" alt="후원" /><img src="images/minju/imges1.png" alt="후원" /><img src="images/minju/imges1.png" alt="후원" /></div>
+          <div class="content"><img src="images/minju/imges1.png" alt="후원" /></div>
         </div>
       </div>
     </div>
@@ -496,8 +495,8 @@
             Copyright (C)나눔메이트. All rights reserved.
           </p>
           <div class="line"></div>
-          
         </div>
+
         <div class="left">
           <i class="fa-solid fa-phone">문의하기</i>
           <button class="oline">온라인문의</button>
