--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     <meta name="author" content="WIDEMOBILE" />
     <meta name="description" content="나눔메이트, 나눔, 자원봉사, 프로그램, 대구봉사 " />
     <meta name="Robots" content="noindex, nofollow" />
-   <!-- Open Graph -->
-   <meta property="og:type" content="website" />
-   <meta property="og:title" content="일상나눔을 만드는 나눔메이트" />
-   <meta property="og:site_name" content="나눔메이트" />
-   <meta property="og:description" content="일상속 나눔을 만들어갑니다. " />
-   <meta property="og:image" content="http://127.0.0.1:5507/images/visual-img2.png" />
-   <meta property="og:url" content="https://pro-nanum.vercel.app/" />
-   <link rel="canonical" href="https://pro-nanum.vercel.app/" />
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="일상나눔을 만드는 나눔메이트" />
+    <meta property="og:site_name" content="나눔메이트" />
+    <meta property="og:description" content="일상속 나눔을 만들어갑니다. " />
+    <meta property="og:image" content="http://127.0.0.1:5507/images/visual-img2.png" />
+    <meta property="og:url" content="https://pro-nanum.vercel.app/" />
+    <link rel="canonical" href="https://pro-nanum.vercel.app/" />
     <!-- Twitter -->
     <meta name="twitter:title" content="일상나눔을 만드는 나눔메이트" />
     <meta name="twitter:description" content="나눔메이트, 나눔, 자원봉사, 프로그램, 대구봉사 " />
@@ -94,7 +94,7 @@
     </header>
     <div class="visual">
       <!--모바일비주얼 이미지 -->
-      <img src="images/mb-visualimg2.png" class="mb-visual-img" alt="모바일 비주얼 이미지">
+      <img src="images/mb-visualimg2.png" class="mb-visual-img" alt="모바일 비주얼 이미지" />
       <img src="images/visual-img2.png" class="visual-img" alt="비주얼 이미지" />
       <div class="counter-wrapper">
         <div class="counter counter-1">
@@ -114,16 +114,17 @@
         </div>
       </div>
       <!-- counter-wrapper 디브 -->
-    </div><!-- visual 디브 -->
+    </div>
+    <!-- visual 디브 -->
     <div class="section1">
       <div class="sec1-inner">
-          <div class="sec1-title">
-              <h2>나눔메이트</h2>
-              <p>아름다운 인연을 나눔메이트와 같이 시작하세요.</p>
-              <p>함께하는 여러분이 '나눔 친구'입니다.</p>
+        <div class="sec1-title">
+          <h2>나눔메이트</h2>
+          <p>아름다운 인연을 나눔메이트와 같이 시작하세요.</p>
+          <p>함께하는 여러분이 '나눔 친구'입니다.</p>
+        </div>
       </div>
     </div>
-  </div>
     <!-- 경란 -->
     <div class="section2">
       <h1 class="section-tite">나눔 프로그램</h1>
@@ -466,10 +467,11 @@
           </div>
         </div>
         <div class="swiper-button-next" id="snsImage">
-          <img src="images/minju/pgnation.png" alt="snsbutton"class="snsImage-btn1"/></div>
+          <img src="images/minju/pgnation.png" alt="snsbutton" class="snsImage-btn1" />
         </div>
       </div>
     </div>
+
     <!-- 반응형 -->
     <div class="snsnanum">
       <img src="images/minju/sns1_mb.png" alt="sns1_mb" />
@@ -500,7 +502,7 @@
         </div>
 
         <div class="left">
-          <div class="tell"><img src="images/minju/tell.png" alt="tell">문의하기</div>
+          <div class="tell"><img src="images/minju/tell.png" alt="tell" />문의하기</div>
           <button class="oline">온라인문의</button>
           <button class="checklist">참여정보확인</button>
         </div>
