--- a/join.html
+++ b/join.html
@@ -92,10 +92,10 @@
       </div>
     </footer>
     <!-- flying banner -->
-    <div class="top-button">
+    <!-- <div class="top-button">
       <a href="#" class="chat-btn">
         <img src="images/minju/fly.png" alt="chat" />
       </a>
-    </div>
+    </div> -->
   </body>
 </html>
