--- a/index.html
+++ b/index.html
@@ -57,21 +57,21 @@
     <!-- 승아 -->
     <header>
       <div class="hd-inner">
-        <nav class="top-nav" id="nav">
-          <a href="#"><img src="images/logo_bg2.png" alt="로고이미지2" class="logo-img" /></a>
+      <nav class="top-nav" id="nav">
+        <a href="#"><img src="images/logo_bg2.png" alt="로고이미지2" class="logo-img"></a>
 
-          <ul class="top-menu">
-            <li><a href="#">서비스 소개</a></li>
-            <li><a href="#">프로그램</a></li>
-            <li><a href="#">게시판</a></li>
-            <li><a href="#">후기</a></li>
-            <div class="log">
-              <li><a href="login.html">로그인</a></li>
-              <li><a href="join.html">회원가입</a></li>
-            </div>
-          </ul>
-        </nav>
-      </div>
+        <ul class="top-menu">
+          <li><a href="#">서비스 소개</a></li>
+          <li><a href="#">프로그램</a></li>
+          <li><a href="#">게시판</a></li>
+          <li><a href="#">후기</a></li>
+          <div class="log">
+            <li><a href="login.html">로그인</a></li>
+            <li><a href="join.html">회원가입</a></li>
+          </div>
+        </ul>
+      </nav>
+    </div>
       <!-- 햄버거 버튼 -->
       <button class="m-bt">
         <span></span>
@@ -88,8 +88,8 @@
           <li><a href="#">후기</a></li>
         </ul>
         <div class="m-log">
-          <li><a href="#">로그인</a></li>
-          <li><a href="#">회원가입</a></li>
+          <li><a href="login.html">로그인</a></li>
+          <li><a href="join.html">회원가입</a></li>
         </div>
       </div>
     </header>
@@ -117,12 +117,48 @@
       <!-- counter-wrapper 디브 -->
     </div>
     <!-- visual 디브 -->
+    <!-- 섹션1 서비스 -->
     <div class="section1">
       <div class="sec1-inner">
-        <div class="sec1-title">
-          <h2>나눔메이트</h2>
-          <p>아름다운 인연을 나눔메이트와 같이 시작하세요.</p>
-          <p>함께하는 여러분이 '나눔 친구'입니다.</p>
+        <div class="sec1-main-text">
+          <!-- <h4>나눔메이트</h4><p>아름다운 인연을 나눔메이트와 같이 시작하세요.</p> -->
+          <h4>아름다운 인연을 나눔메이트와 같이 시작하세요.</h4>
+          <!-- <h4>함께하는 여러분이 '나눔 친구'입니다.</h4> -->
+        </div>
+        <div class="service-box">
+          <figure class="service">
+     
+            <img src="images/sec1-1.png" alt="sample45" />
+            <div class="sb-img-title sb-img-title1">
+              나눔공간
+            </div>
+            <figcaption>
+              <h3>나눔공간</h3>
+              <!-- <p>Weekends don't count unless you spend them doing something completely pointless.</p> -->
+              <p>커뮤니티 공간을 제공하여 지역사회의 나눔 문화공간을 만들어 갑니다.</p>
+            </figcaption>
+            <a href="#"></a>
+          </figure>
+          <figure class="service">
+            <div class="sb-img-title sb-img-title2">
+              쉬운모집신청
+            </div>
+            <img src="images/sec1-2.png" alt="sample45" />
+            <figcaption>
+              <h3>쉬운 모집신청</h3>
+              <!-- <p>Weekends don't count unless you spend them doing something completely pointless.</p> -->
+              <p>개인도 기관도 신청을 쉽게하여 더 많은 나눔을 지원합니다</p>
+            </figcaption>
+            <a href="#"></a>
+          </figure>
+          <figure class="service">
+            <img src="images/sec1-3.png" alt="sample45" />
+           <div class="service3-text">
+            <span>처음이신가요?</span>
+            <p>누구나 쉽게 참여할 수 있는 나눔메이트 서비스를 안내드립니다.</p>
+           </div>
+            <a href="#"></a>
+          </figure>
         </div>
       </div>
     </div>
