--- a/index.html
+++ b/index.html
@@ -1158,7 +1158,7 @@
       <img src="images/minju/sns4_mb.png" alt="sns4_mb" />
     </div>
     <hr />
-    <div class="section5">
+    <div class="section5 inner">
       <div class="animated-title">
         <div class="track">
           <div class="content"><img src="images/minju/imges1.png" alt="후원" /><img src="images/minju/imges1.png" alt="후원" /><img src="images/minju/imges1.png" alt="후원" /></div>
@@ -1185,7 +1185,7 @@
       </div>
     </footer>
     <!-- flying banner -->
-    <div class="top-button">
+    <div class="pop-button">
       <a href="#" class="chat-btn">
         <img src="images/minju/fly.png" alt="chat" />
       </a>
@@ -1196,5 +1196,11 @@
         <button class="heart"><i class="fa-regular fa-heart"></i> 참여하기</button>
       </ul>
     </div>
+    <!-- 탑버튼-->
+       <div class="top-button">
+       <a href="#" class="top-btn" id="top-btn">
+        <img src="images/minju/arrow-up-solid.svg" alt="탑버튼" id="top-btn-img">
+       </a>
+      </div>
   </body>
 </html>
