--- a/join.html
+++ b/join.html
@@ -81,11 +81,9 @@
             <br />
             Copyright (C)나눔메이트. All rights reserved.
           </p>
-          <div class="line"></div>
-          
         </div>
         <div class="left">
-          <div class="tell"><img src="images/minju/tell.png" alt="tell">문의하기</div>
+          <div class="tell"><img src="images/minju/tell.png" alt="tell" />문의하기</div>
           <button class="oline">온라인문의</button>
           <button class="checklist">참여정보확인</button>
         </div>
