--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B447NG4HYW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-B447NG4HYW');
+</script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>나눔메이트</title>
@@ -121,17 +130,12 @@
     <div class="section1">
       <div class="sec1-inner">
         <div class="sec1-main-text">
-          <!-- <h4>나눔메이트</h4><p>아름다운 인연을 나눔메이트와 같이 시작하세요.</p> -->
           <h4>아름다운 인연을 나눔메이트와 같이 시작하세요.</h4>
-          <!-- <h4>함께하는 여러분이 '나눔 친구'입니다.</h4> -->
         </div>
         <div class="service-box">
           <figure class="service">
-     
-            <img src="images/sec1-1.png" alt="sample45" />
-            <div class="sb-img-title sb-img-title1">
-              나눔공간
-            </div>
+            <img src="images/sec1-1.jpg" alt="sample45" />
+            <div class="sb-img-title sb-img-title1">나눔공간</div>
             <figcaption>
               <h3>나눔공간</h3>
               <!-- <p>Weekends don't count unless you spend them doing something completely pointless.</p> -->
@@ -140,12 +144,10 @@
             <a href="#"></a>
           </figure>
           <figure class="service">
-            <div class="sb-img-title sb-img-title2">
-              쉬운모집신청
-            </div>
+            <div class="sb-img-title sb-img-title2">쉬운모집신청</div>
             <img src="images/sec1-2.png" alt="sample45" />
             <figcaption>
-              <h3>쉬운 모집신청</h3>
+              <h3>쉬운신청</h3>
               <!-- <p>Weekends don't count unless you spend them doing something completely pointless.</p> -->
               <p>개인도 기관도 신청을 쉽게하여 더 많은 나눔을 지원합니다</p>
             </figcaption>
@@ -153,10 +155,11 @@
           </figure>
           <figure class="service">
             <img src="images/sec1-3.png" alt="sample45" />
-           <div class="service3-text">
-            <span>처음이신가요?</span>
-            <p>누구나 쉽게 참여할 수 있는 나눔메이트 서비스를 안내드립니다.</p>
-           </div>
+            <div class="service3-text">
+              <span>처음이신가요?</span>
+              <p>누구나 쉽게 참여할 수 있는 나눔메이트 서비스를 안내드립니다.</p>
+  
+            </div>
             <a href="#"></a>
           </figure>
         </div>
