--- a/index.html
+++ b/index.html
@@ -1168,7 +1168,7 @@
       <img src="images/minju/sns4_mb.png" alt="sns4_mb" />
     </div>
     <hr />
-    <div class="section5 inner">
+    <div class="section5">
       <div class="animated-title">
         <div class="track">
           <div class="content"><img src="images/minju/imges1.png" alt="후원" /><img src="images/minju/imges1.png" alt="후원" /><img src="images/minju/imges1.png" alt="후원" /></div>
