--- a/index.html
+++ b/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-B447NG4HYW"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-B447NG4HYW');
-</script>
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-M5KBGJXS');</script>
-  <!-- End Google Tag Manager -->
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-M5KBGJXS");
+    </script>
+    <!-- End Google Tag Manager -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>나눔메이트</title>
@@ -68,26 +66,37 @@
     <script src="js/seunga.js"></script>
     <script src="js/kyungran.js"></script>
     <script src="js/minju.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-B447NG4HYW"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-B447NG4HYW");
+    </script>
   </head>
   <body>
     <!-- 승아 -->
     <header>
       <div class="hd-inner">
-      <nav class="top-nav" id="nav">
-        <a href="#"><img src="images/logo_bg2.png" alt="로고이미지2" class="logo-img"></a>
+        <nav class="top-nav" id="nav">
+          <a href="#"><img src="images/logo_bg2.png" alt="로고이미지2" class="logo-img" /></a>
 
-        <ul class="top-menu">
-          <li><a href="#">서비스 소개</a></li>
-          <li><a href="#">프로그램</a></li>
-          <li><a href="#">게시판</a></li>
-          <li><a href="#">후기</a></li>
-          <div class="log">
-            <li><a href="login.html">로그인</a></li>
-            <li><a href="join.html">회원가입</a></li>
-          </div>
-        </ul>
-      </nav>
-    </div>
+          <ul class="top-menu">
+            <li><a href="#">서비스 소개</a></li>
+            <li><a href="#">프로그램</a></li>
+            <li><a href="#">게시판</a></li>
+            <li><a href="#">후기</a></li>
+            <div class="log">
+              <li><a href="login.html">로그인</a></li>
+              <li><a href="join.html">회원가입</a></li>
+            </div>
+          </ul>
+        </nav>
+      </div>
       <!-- 햄버거 버튼 -->
       <button class="m-bt">
         <span></span>
@@ -165,7 +174,6 @@
             <div class="service3-text">
               <span>처음이신가요?</span>
               <p>누구나 쉽게 참여할 수 있는 나눔메이트 서비스를 안내드립니다.</p>
-  
             </div>
             <a href="#"></a>
           </figure>
@@ -1207,14 +1215,13 @@
       </ul>
     </div>
     <!-- 탑버튼-->
-       <div class="top-button">
-       <a href="#" class="top-btn" id="top-btn">
-        <img src="images/minju/arrow-up-solid.svg" alt="탑버튼" id="top-btn-img">
-       </a>
-      </div>
+    <div class="top-button">
+      <a href="#" class="top-btn" id="top-btn">
+        <img src="images/minju/arrow-up-solid.svg" alt="탑버튼" id="top-btn-img" />
+      </a>
+    </div>
   </body>
   <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M5KBGJXS"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M5KBGJXS" height="0" width="0" style="display: none; visibility: hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
 </html>
