--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
     <div class="section1">
       <div class="sec1-inner">
         <div class="sec1-main-text">
-          <h4>아름다운 인연을 나눔메이트와 같이 시작하세요.</h4>
+          <h4>아름다운 인연을<br>
+            나눔메이트와 같이 시작하세요.</h4>
         </div>
         <div class="service-box">
           <figure class="service">
