1안  반응형 플라잉버튼

--- a/login.html
+++ b/login.html
@@ -73,9 +73,9 @@
           <button class="loginbutton"><a href="index.html" id="alertBtn">로그인</a></button>
           <button class="joinbutton"><a href="join.html">회원가입</a></button>
           <div class="icon">
-            <a href="#"><img src="images/minju/icon1.png" alt="카카오톡" /></a>
-            <a href="#"><img src="images/minju/icon2.png" alt="구글" /></a>
-            <a href="#"><img src="images/minju/icon3.png" alt="네이버" /> </a>
+            <a href="#"><img src="images/minju/icon1.png" alt="카카오" /></a>
+            <a href="#"><img src="images/minju/icon4.png" alt="인스타" /></a>
+            <a href="#"><img src="images/minju/icon5.png" alt="페이스북" /> </a>
           </div>
         </form>
       </div>
