--- a/index.html
+++ b/index.html
@@ -1189,14 +1189,14 @@
           <h1 class="nanum">나눔 <span>메이트</span></h1>
           <p>
             나눔메이트는 사회에 기여하고자 하는 분들을 위한 소중한 커뮤니티입니다. <br />
-            서비스 이용약관 개인정보 처리방침
+            서비스 이용약관 | 개인정보 처리방침
             <br />
             <br />
             Copyright (C)나눔메이트. All rights reserved.
           </p>
         </div>
         <div class="left">
-          <div class="tell"><img src="images/minju/tell.png" alt="tell" />문의하기</div>
+          <div class="tell"><img src="images/minju/tell.png" alt="tell" /> 문의하기</div>
           <button class="oline">온라인문의</button>
           <button class="checklist">참여정보확인</button>
         </div>
@@ -1209,7 +1209,7 @@
       </div>
       <div class="top-button">
         <a href="#" class="top-btn" id="top-btn">
-          <img src="images/minju/arrow-up-solid.svg" alt="탑버튼" id="top-btn-img" />
+          <img src="images/minju/circle-arrow-up-solid.svg" alt="탑버튼" id="top-btn-img" />
         </a>
       </div>
     </div>
