섹션1 이미지 변경, 간격 수정

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           </figure>
           <figure class="service">
             <div class="sb-img-title sb-img-title2">쉬운모집신청</div>
-            <img src="images/sec1-2.png" alt="sample45" />
+            <img src="images/sec1-2.jpg" alt="sample45" />
             <figcaption>
               <h3>쉬운신청</h3>
               <!-- <p>Weekends don't count unless you spend them doing something completely pointless.</p> -->
