--- a/index.html
+++ b/index.html
@@ -1209,14 +1209,14 @@
       </div>
     </footer>
     <!-- flying banner -->
-    <!-- <div class="pop-button">
+    <div class="pop-button">
       <a href="#" class="chat-btn"><img src="images/minju/blue.png" alt="chat" /><span>신청하기</span> </a>
     </div>
     <div class="top-button">
       <a href="#" class="top-btn" id="top-btn">
         <img src="images/minju/circle-arrow-up-solid.svg" alt="탑버튼" id="top-btn-img" />
       </a>
-    </div> -->
+    </div>
     <!-- 신청하기 -->
     <div class="takejoin" id="bt-menu">
       <button class="heart"><i class="fa-regular fa-heart"></i> 신청하기</button>
