--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
     </script>
   </head>
   <body>
-      <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M5KBGJXS" height="0" width="0" style="display: none; visibility: hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M5KBGJXS" height="0" width="0" style="display: none; visibility: hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <!-- 승아 -->
     <header>
       <div class="hd-inner">
@@ -247,9 +247,9 @@
           <div class="img-box">
             <a href="#">
               <img class="img1" src="images/kyungran/1-1.png" alt="봉사이미지" />
-              <span class="span1">벽화길 조성 자원봉사활동 모집</span>
+              <span class="span1">어르신 말벗 봉사자 모집</span>
               <span> 2024-05-20</span>
-              <span>&nbsp&nbsp대구 &nbsp달서구</span>
+              <span>대구 &nbsp서구</span>
             </a>
             <button type="button" class="hart-icon"></button>
           </div>
@@ -265,18 +265,18 @@
           <div class="img-box">
             <a href="#">
               <img class="img1" src="images/kyungran/1-3.png" alt="봉사이미지" />
-              <span class="span1">벽화길 조성 자원봉사활동 모집</span>
+              <span class="span1">면마스크 만들기 자원봉사자 모집</span>
               <span> 2024-05-20 </span>
-              <span>대구 &nbsp달서구</span>
+              <span>대구 &nbsp남구</span>
             </a>
             <button type="button" class="hart-icon"></button>
           </div>
           <div class="img-box">
             <a href="#">
               <img class="img1" src="images/kyungran/1-4.png" alt="봉사이미지" />
-              <span class="span1">벽화길 조성 자원봉사활동 모집</span>
+              <span class="span1">의료시설 업무보조 봉사자 모집</span>
               <span> 2024-05-20 </span>
-              <span>대구 &nbsp달서구</span>
+              <span>대구 &nbsp중구</span>
             </a>
             <button type="button" class="hart-icon"></button>
           </div>
@@ -285,36 +285,36 @@
           <div class="img-box">
             <a href="#">
               <img class="img1" src="images/kyungran/1-5.png" alt="봉사이미지" />
-              <span class="span1">벽화길 조성 자원봉사활동 모집</span>
+              <span class="span1">소외계층 생필품 전달 봉사자 모집</span>
               <span> 2024-05-20 </span>
-              <span>대구 &nbsp달서구</span>
+              <span>대구 &nbsp동구</span>
             </a>
             <button type="button" class="hart-icon"></button>
           </div>
           <div class="img-box">
             <a href="#">
               <img class="img1" src="images/kyungran/1-6.png" alt="봉사이미지" />
-              <span class="span1">벽화길 조성 자원봉사활동 모집</span>
+              <span class="span1">어버이날 카네이션 만들기 활동보조 모집</span>
               <span> 2024-05-20 </span>
-              <span>대구 &nbsp달서구</span>
+              <span>대구 &nbsp남구</span>
             </a>
             <button type="button" class="hart-icon"></button>
           </div>
           <div class="img-box">
             <a href="#">
               <img class="img1" src="images/kyungran/1-7.png" alt="봉사이미지" />
-              <span class="span1">벽화길 조성 자원봉사활동 모집</span>
+              <span class="span1">노인복지관 환경게시판 정비 봉사활동</span>
               <span> 2024-05-20 </span>
-              <span>대구 &nbsp달서구</span>
+              <span>대구 &nbsp북구</span>
             </a>
             <button type="button" class="hart-icon"></button>
           </div>
           <div class="img-box">
             <a href="#">
               <img class="img1" src="images/kyungran/1-8.png" alt="봉사이미지" />
-              <span class="span1">벽화길 조성 자원봉사활동 모집</span>
+              <span class="span1">금호강변 환경정화 봉사자 모집</span>
               <span> 2024-05-20 </span>
-              <span>대구 &nbsp달서구</span>
+              <span>대구 &nbsp달성군</span>
             </a>
             <button type="button" class="hart-icon"></button>
           </div>
@@ -329,7 +329,7 @@
               <img class="img1" src="images/kyungran/2-1.png" alt="봉사이미지" />
               <span class="span1">벽화길 조성 자원봉사활동 모집</span>
               <span> 2024-05-20</span>
-              <span>&nbsp&nbsp대구 &nbsp달서구</span>
+              <span>대구 &nbsp달서구</span>
             </a>
             <button type="button" class="hart-icon"></button>
           </div>
@@ -409,7 +409,7 @@
               <img class="img1" src="images/kyungran/3-1.png" alt="봉사이미지" />
               <span class="span1">벽화길 조성 자원봉사활동 모집</span>
               <span> 2024-05-20</span>
-              <span>&nbsp&nbsp대구 &nbsp달서구</span>
+              <span>대구 &nbsp달서구</span>
             </a>
             <button type="button" class="hart-icon"></button>
           </div>
@@ -489,7 +489,7 @@
               <img class="img1" src="images/kyungran/1-1.png" alt="봉사이미지" />
               <span class="span1">벽화길 조성 자원봉사활동 모집</span>
               <span> 2024-05-20</span>
-              <span>&nbsp&nbsp대구 &nbsp달서구</span>
+              <span>대구 &nbsp달서구</span>
             </a>
             <button type="button" class="hart-icon"></button>
           </div>
@@ -569,7 +569,7 @@
               <img class="img1" src="images/kyungran/2-1.png" alt="봉사이미지" />
               <span class="span1">벽화길 조성 자원봉사활동 모집</span>
               <span> 2024-05-20</span>
-              <span>&nbsp&nbsp대구 &nbsp달서구</span>
+              <span>대구 &nbsp달서구</span>
             </a>
             <button type="button" class="hart-icon"></button>
           </div>
@@ -649,7 +649,7 @@
               <img class="img1" src="images/kyungran/3-1.png" alt="봉사이미지" />
               <span class="span1">벽화길 조성 자원봉사활동 모집</span>
               <span> 2024-05-20</span>
-              <span>&nbsp&nbsp대구 &nbsp달서구</span>
+              <span>대구 &nbsp달서구</span>
             </a>
             <button type="button" class="hart-icon"></button>
           </div>
@@ -729,7 +729,7 @@
               <img class="img1" src="images/kyungran/1-1.png" alt="봉사이미지" />
               <span class="span1">벽화길 조성 자원봉사활동 모집</span>
               <span> 2024-05-20</span>
-              <span>&nbsp&nbsp대구 &nbsp달서구</span>
+              <span>대구 &nbsp달서구</span>
             </a>
             <button type="button" class="hart-icon"></button>
           </div>
@@ -809,7 +809,7 @@
               <img class="img1" src="images/kyungran/2-1.png" alt="봉사이미지" />
               <span class="span1">벽화길 조성 자원봉사활동 모집</span>
               <span> 2024-05-20</span>
-              <span>&nbsp&nbsp대구 &nbsp달서구</span>
+              <span>대구 &nbsp달서구</span>
             </a>
             <button type="button" class="hart-icon"></button>
           </div>
@@ -888,7 +888,7 @@
               <img class="img1" src="images/kyungran/3-1.png" alt="봉사이미지" />
               <span class="span1">벽화길 조성 자원봉사활동 모집</span>
               <span> 2024-05-20</span>
-              <span>&nbsp&nbsp대구 &nbsp달서구</span>
+              <span>대구 &nbsp달서구</span>
             </a>
             <button type="button" class="hart-icon"></button>
           </div>
@@ -968,7 +968,7 @@
               <img class="img1" src="images/kyungran/1-1.png" alt="봉사이미지" />
               <span class="span1">벽화길 조성 자원봉사활동 모집</span>
               <span> 2024-05-20</span>
-              <span>&nbsp&nbsp대구 &nbsp달서구</span>
+              <span>대구 &nbsp달서구</span>
             </a>
             <button type="button" class="hart-icon"></button>
           </div>
@@ -1048,7 +1048,7 @@
               <img class="img1" src="images/kyungran/2-1.png" alt="봉사이미지" />
               <span class="span1">벽화길 조성 자원봉사활동 모집</span>
               <span> 2024-05-20</span>
-              <span>&nbsp&nbsp대구 &nbsp달서구</span>
+              <span>대구 &nbsp달서구</span>
             </a>
             <button type="button" class="hart-icon"></button>
           </div>
@@ -1131,7 +1131,9 @@
         <!-- 커뮤니티 -->
         <div class="CM-box">
           <ul class="CM">
-            <span> <img src="images/kyungran/icon3.png" alt="제목아이콘" />&nbsp 커뮤니티<a href="#" class="plus-icon"></a></span>
+            <span>
+              <img src="images/kyungran/icon3.png" alt="제목아이콘" />&nbsp 커뮤니티<a href="#"><i class="fas fa-thin fa-plus"></i></a
+            ></span>
             <a href="#"><li>5월 25일(일) 오후 교육봉사 가실 분 1분 더 구합니다.</li></a>
             <a href="#"><li>5월 25일(일)~26일(일) 가실 분 모집합니다~</li></a>
             <a href="#"><li>6월 마지막주 주말 마지막 한자리 남았습니다~!</li></a>
@@ -1142,7 +1144,9 @@
         <!-- 자주 묻는 질문 -->
         <div class="FAQ-box">
           <ul class="FAQ">
-            <span> <img src="images/kyungran/icon3.png" alt="제목아이콘" />&nbsp 자주 묻는 질문 <a href="#" class="plus-icon"></a></span>
+            <span>
+              <img src="images/kyungran/icon3.png" alt="제목아이콘" />&nbsp 자주 묻는 질문 <a href="#"><i class="fas fa-thin fa-plus"></i></a
+            ></span>
             <a href="#"><li>Q.&nbsp 나눔메이트는 어떤 서비스인가요?</li></a>
             <a href="#"><li>Q.&nbsp 모집 마감이후에는 신청이 불가능한가요?</li></a>
             <a href="#"><li>Q.&nbsp 봉사실적 조회도 가능한가요?</li></a>
@@ -1209,18 +1213,17 @@
       </div>
     </footer>
     <!-- flying banner -->
-    <div class="pop-button">
+    <!-- <div class="pop-button">
       <a href="#" class="chat-btn"><img src="images/minju/blue.png" alt="chat" /><span>신청하기</span> </a>
     </div>
     <div class="top-button">
       <a href="#" class="top-btn" id="top-btn">
         <img src="images/minju/circle-arrow-up-solid.svg" alt="탑버튼" id="top-btn-img" />
       </a>
-    </div>
+    </div> -->
     <!-- 신청하기 -->
     <div class="takejoin" id="bt-menu">
       <button class="heart"><i class="fa-regular fa-heart"></i> 신청하기</button>
     </div>
   </body>
-
 </html>
